--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html>
+<header><title>This is title</title></header>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+Hello world
 </body>
 </html>
