--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
-<header><title>This is title</title></header>
+<header><title>Manwei Chan</title></header>
 <body>
-Hello world
+<div id="intro">
+	Welcome to my site! 
+</div>
 </body>
 </html>
