--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <header><title>Manwei Chan</title></header>
 <body>
 <div id="intro">
-	Welcome to my site! 
+	Welcome to my site! Below you can enter either my professional site or my hobby site.
 </div>
+<div id="pro">
+	Professional
+</div>
+<div id="fun">For Fun!</div>
 </body>
 </html>
