--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <header><title>Manwei Chan</title></header>
 <body>
-<div id="intro">
-	Welcome to my site! Below you can enter either my professional site or my hobby site.
+<div id="content">
+	<div id="banner">Manwei Chan</div>
+		<div id="intro">
+			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or my hobby site.
+		</div>
+	<div id="pro">Professional</div>
+	<div id="fun">For Fun!</div>
 </div>
-<div id="pro">
-	Professional
-</div>
-<div id="fun">For Fun!</div>
 </body>
 </html>
