--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<div id="banner">Manwei Chan</div>
 	<div id="intro">
 			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or my hobby site.
+
+			Testing
 	</div>
 	<div id="pro">Professional</div>
 	<div id="fun">For Fun!</div>
