--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div id="content">
 	<div id="banner">Manwei Chan</div>
 	<div id="intro">
-			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or my hobby site.
+			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or see what I do for fun.
 
 			Testing
 	</div>
