--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
-<header><title>Manwei Chan</title></header>
+<head>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+
+
 <body>
+<header><title>Manwei Chan</title></header>
 <div id="content">
 	<div id="banner">Manwei Chan</div>
 	<div id="intro">
 			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or see what I do for fun.
-
-			Testing
 	</div>
 	<div id="pro">Professional</div>
 	<div id="fun">For Fun!</div>
