--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	</div>
 	<div id="pro">Professional</div>
 	<div id="fun">For Fun!</div>
+
+	<div id=pro_pic>
+		<img src="pics/pro_pic.jpg">
+	</div>
 </div>
 </body>
 </html>
