--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or see what I do for fun.
 	</div>
 	<div id="pro">Professional</div>
-	<div id="fun">For Fun!</div>
+	
 
-	<div id=pro_pic>
-		<img src="pics/pro_pic.jpg">
+	<div id=pro_pic1>
+		<img src="pics/pro_pic.jpg" id="pro_pic">
 	</div>
+
+	<div id="fun">For Fun!</div>
 </div>
 </body>
 </html>
