--- a/index.html
+++ b/index.html
@@ -6,20 +6,39 @@
 
 
 <body>
-<header><title>Manwei Chan</title></header>
-<div id="content">
-	<div id="banner">Manwei Chan</div>
-	<div id="intro">
-			Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or see what I do for fun.
-	</div>
-	<div id="pro">Professional</div>
+	<header><title>Manwei Chan</title></header>
 	
+	<div id="content">
+		<div id="banner">Manwei Chan</div>
+		<div id="intro">
+			<p>Welcome to my site! I currently live in San Pedro de Atacama in Chile, and I work as the senior research technician for the <a href="http://sites.krieger.jhu.edu/class/">CLASS telescope </a>. Below you can enter either my professional site or see what I do for fun.</p>
+		</div>
 
+	</div id="twopics">
+		<figure id="professional" class="pics">
+			<img src="pics/pro_pic.jpg" id="pro_pic" alt="">
+			<figcaption class="caption">Professional</figcaption>
+		</figure>
+
+		<figure id="fun" class="pics">
+			<img src="pics/milky_way.png" id="fun_pic" alt="">
+			<figcaption class="caption">For Fun!</figcaption>
+		</figure>
+	</div>
+<!--
+	<div class="pic_text">
+		<div id="pro_text">Professional</div>
+	</div>
+	
+	
 	<div id=pro_pic1>
 		<img src="pics/pro_pic.jpg" id="pro_pic">
 	</div>
 
-	<div id="fun">For Fun!</div>
+	<div class="pic_text">
+		<div id="fun_text">For Fun!</div>
+	</div>
+-->
 </div>
 </body>
 </html>
