--- a/index.html
+++ b/index.html
@@ -15,30 +15,18 @@
 		</div>
 
 	<div id="twopics">
-		<figure id="professional" class="pics">
-			<img src="pics/pro_pic.jpg" id="pro_pic" alt="">
+		<a href="professional/pro_home.html" class="nav_link">
+		<figure id="professional">
+			<img src="pics/pro_pic.jpg" id="pro_pic" class="button" alt="">
 			<figcaption class="caption">Professional</figcaption>
 		</figure>
-
-		<figure id="fun" class="pics">
-			<img src="pics/milky_way.jpg" id="fun_pic" alt="">
+		</a>
+		<figure id="fun">
+			<img src="pics/milky_way.jpg" id="fun_pic" class="button" alt="">
 			<figcaption class="caption">For Fun!</figcaption>
 		</figure>
 	</div>
-<!--
-	<div class="pic_text">
-		<div id="pro_text">Professional</div>
-	</div>
-	
-	
-	<div id=pro_pic1>
-		<img src="pics/pro_pic.jpg" id="pro_pic">
-	</div>
 
-	<div class="pic_text">
-		<div id="fun_text">For Fun!</div>
-	</div>
--->
 </div>
 </body>
 </html>
