--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 		</div>
 
 	<div id="twopics">
-		<a href="professional/pro_home.html" class="nav_link">
+		<a href="professional/pro_home.html" class="nav-link">
 		<figure id="professional">
 			<img src="pics/pro_pic.jpg" id="pro_pic" class="button" alt="">
 			<figcaption class="caption">Professional</figcaption>
 		</figure>
 		</a>
+		<a href="fun/fun_home.html" class="nav-link">
 		<figure id="fun">
 			<img src="pics/milky_way.jpg" id="fun_pic" class="button" alt="">
 			<figcaption class="caption">For Fun!</figcaption>
 		</figure>
+		</a>
 	</div>
 
 </div>
