--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<hr>
 </div>
 
-<div id="links">
+<!-- <div id="links">
 	<div class="link_photos">
 		<figure id="pic_me">
 			<img src="pics/pro_pic.jpg" id="me_pic" class="nav_photos" alt="">
@@ -55,6 +55,28 @@
 	<div class="link_photos">
 		<figure id="pic_travel">
 			<img src="pics/travel_pic3.jpg" id="travel_pic" class="nav_photos" alt="">
+			<figcaption class="caption">My Travels</figcaption>
+		</figure>
+	</div>
+	<span class="stretch"></span>
+</div> -->
+
+<div id="links">
+	<div class="link_photos">
+		<figure id="pic_me">
+			<img src="pics/life_pic2.jpg" id="me_pic" class="nav_photos" alt="">
+			<figcaption class="caption">My Life</figcaption>
+		</figure>
+	</div>
+	<div class="link_photos">
+		<figure id="pic_CLASS">
+			<img src="pics/CLASS_pic5.jpg" id="CLASS_pic" class="nav_photos" alt="">
+			<figcaption class="caption">My Work</figcaption>
+		</figure>
+	</div>
+	<div class="link_photos">
+		<figure id="pic_travel">
+			<img src="pics/travel_pic4.jpg" id="travel_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Travels</figcaption>
 		</figure>
 	</div>
