--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	
 <div class="topnav" id="myTopnav">
   <div id="nav_name">
-	  <a href="index2.html">MANWEI CHAN</a>
+	  <a href="index.html">MANWEI CHAN</a>
   </div>
   <div id="nav_bar">
-	  <a href="index2.html">Home</a>
-	  <a href="#news">About</a>
+	  <a href="index.html">Home</a>
+	  <a href="my_life/my_life.html">My Life</a>
 	  <a href="#contact">My Work</a>
 	  <a href="#about">My Travels</a>
 	  <a href="#about">Photography</a>
@@ -39,33 +39,12 @@
 	<hr>
 </div>
 
-<!-- <div id="links">
-	<div class="link_photos">
-		<figure id="pic_me">
-			<img src="pics/pro_pic.jpg" id="me_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Life</figcaption>
-		</figure>
-	</div>
-	<div class="link_photos">
-		<figure id="pic_CLASS">
-			<img src="pics/CLASS_pic3.jpg" id="CLASS_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Work</figcaption>
-		</figure>
-	</div>
-	<div class="link_photos">
-		<figure id="pic_travel">
-			<img src="pics/travel_pic3.jpg" id="travel_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Travels</figcaption>
-		</figure>
-	</div>
-	<span class="stretch"></span>
-</div> -->
-
 <div id="links">
 	<div class="link_photos">
 		<figure id="pic_me">
 			<img src="pics/life_pic2.jpg" id="me_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Life</figcaption>
+<!-- 			<img src="pics/life_pic1.jpg" id="me_pic)color" class="nav_photos" alt="">
+ -->			<figcaption class="caption">My Life</figcaption>
 		</figure>
 	</div>
 	<div class="link_photos">
