--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <div id="nav_bar">
 	  <a href="index.html">Home</a>
 	  <a href="my_life/my_life.html">My Life</a>
-	  <a href="#contact">My Work</a>
-	  <a href="#about">My Travels</a>
+	  <a href="my_work/my_work.html">My Work</a>
+	  <a href="my_travels/my_travels.html">My Travels</a>
 	  <a href="#about">Photography</a>
   </div>
 </div>
@@ -41,23 +41,28 @@
 
 <div id="links">
 	<div class="link_photos">
+		<a href="my_life/my_life.html" class="nav-link">
 		<figure id="pic_me">
 			<img src="pics/life_pic2.jpg" id="me_pic" class="nav_photos" alt="">
-<!-- 			<img src="pics/life_pic1.jpg" id="me_pic)color" class="nav_photos" alt="">
- -->			<figcaption class="caption">My Life</figcaption>
+			<figcaption class="caption">My Life</figcaption>
 		</figure>
+		</a>
 	</div>
 	<div class="link_photos">
+		<a href="my_work/my_work.html" class="nav-link">
 		<figure id="pic_CLASS">
 			<img src="pics/CLASS_pic5.jpg" id="CLASS_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Work</figcaption>
 		</figure>
+		</a>
 	</div>
 	<div class="link_photos">
+		<a href="my_travels/my_travels.html" class="nav-link">
 		<figure id="pic_travel">
 			<img src="pics/travel_pic4.jpg" id="travel_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Travels</figcaption>
 		</figure>
+		</a>
 	</div>
 	<span class="stretch"></span>
 </div>
