--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 	<div class="parent"> 
-		<img src="pics/star_kayak2.jpg" id="star_kayak" alt="">
+		<img src="pics/star_kayak_web.jpg" id="star_kayak" alt="">
 	</div>	
 
 	<div class="welcome_text">
@@ -43,7 +43,7 @@
 	<div class="link_photos">
 		<a href="my_life/my_life.html" class="nav-link">
 		<figure id="pic_me">
-			<img src="pics/life_pic2.jpg" id="me_pic" class="nav_photos" alt="">
+			<img src="pics/life_pic2_web.jpg" id="me_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Life</figcaption>
 		</figure>
 		</a>
@@ -51,7 +51,7 @@
 	<div class="link_photos">
 		<a href="my_work/my_work.html" class="nav-link">
 		<figure id="pic_CLASS">
-			<img src="pics/CLASS_pic5.jpg" id="CLASS_pic" class="nav_photos" alt="">
+			<img src="pics/CLASS_pic5_web.jpg" id="CLASS_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Work</figcaption>
 		</figure>
 		</a>
@@ -59,7 +59,7 @@
 	<div class="link_photos">
 		<a href="my_travels/my_travels.html" class="nav-link">
 		<figure id="pic_travel">
-			<img src="pics/travel_pic4.jpg" id="travel_pic" class="nav_photos" alt="">
+			<img src="pics/travel_pic4_web.jpg" id="travel_pic" class="nav_photos" alt="">
 			<figcaption class="caption">My Travels</figcaption>
 		</figure>
 		</a>
