--- a/my_life/my_life.html
+++ b/my_life/my_life.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="parent"> 
-		<img src="life_pic_cropped.jpg" id="my_life" alt="">
+		<img src="life_pic_cropped_web.jpg" id="my_life" alt="">
 	</div>	
 
 	<div class="welcome_text">
