--- a/my_life/my_life.html
+++ b/my_life/my_life.html
@@ -17,8 +17,8 @@
 		<div id="nav_bar">
 			<a href="../index.html">Home</a>
 			<a href="my_life.html">My Life</a>
-			<a href="#contact">My Work</a>
-			<a href="#travels">My Travels</a>
+			<a href="../my_work/my_work.html">My Work</a>
+			<a href="my_travels/my_travels.html">My Travels</a>
 			<a href="#photography">Photography</a>
 		</div>
 	</div>
@@ -103,3 +103,4 @@
 </div>
 </div>
 </div>
+</body>
