Added SanPedro index.html

--- a/my_life/my_life.html
+++ b/my_life/my_life.html
@@ -50,10 +50,10 @@
 
 		<div id=early_period_para class="content">
 			<p>
-				I grew up in Ardsley, New York, a quiet suburban town in the county of Westchester. I have always loved sports and grew up playing Little League Baseball, basketball, and skiing in the Catskills at Windham mountain. In Middle School, I began my interscholastic athletic career, representing Ardsley in American Football (not soccer), basketball, and baseball. In 8th grade, arguable the height of my athletic career, I scored the winning touchdown that ended a two year Ardsley Football loosing streak and captained the baseball team to an almost undefeated season!
+				I grew up in Ardsley, New York, a quiet suburban town in the county of Westchester. I have always loved sports and grew up playing Little League Baseball, basketball, and skiing in the Catskills at Windham mountain. In Middle School, I began my interscholastic athletic career, representing Ardsley in American Football (not soccer), basketball, and baseball. In 8th grade, arguably the height of my athletic career, I scored the winning touchdown that ended a two year Ardsley Football loosing streak and captained the baseball team to an almost undefeated season!
 			</p>
 			<p>
-				For high school, I attended Phillips Academy Andover, a boarding school in Massachusetts. Musically, I played percussion in the orchestra and snare drum for the Drumline. Athletically, I lettered in baseball and diving, and also captained the JV football team. Academically, I gained an interest in physics, taking a physics class for 3 out of the 4 years I attended Andover and learning advanced topics such as fluid mechanics and Lagrangian mechanics.
+				For high school, I attended Phillips Academy Andover, a boarding school in Massachusetts. Musically, I played percussion in the orchestra and snare drum for the Drumline. Athletically, I lettered in baseball and diving, and also captained the JV football team. Academically, I gained an interest in physics, taking a physics class for 3 out of the 4 years I attended Andover and learning advanced topics such as fluid mechanics and Lagrangian mechanics. In 2011, I graduated as my residential cluster president and received Cum Laude recognition.
 			</p>
 		</div>
 	</div>
@@ -67,13 +67,13 @@
 		I attended Johns Hopkins University (JHU) for college, where I pursued my interest in physics. The summer after my freshman year, I began conducting research with the Cosmology Large Angular Scale Surveyor (CLASS) under Tobias Marriage. I continued to pursue research with this group throughout my time at JHU. My first summer I characterized the transmission properties of various lenses using a Fourier Transform Spectrometer. My second year, I characterized the thermal coupling constant between our transition edge sensor (TES) sensors and the thermal bath designed to cool the sensors from photon heating. My last two years at JHU were dedicated to preparing a cryostat for deployment in the field, culminating in my senior thesis. During my time in college, I also had an internship at the JHU Applied Physics Lab where I worked on characterizing sperm whale sonar interference, and I studied abroad in Geneva, Switzerland, where I worked at CERN on the KWISP project.
 	</p>
 	<p>
-		Outside of Academics, I lead canoeing and whitewater kayaking trips with the Outdoor Pursuits Club. Every year, I led an overnight, week-long pre-orientation trip for incoming freshman, as well as day trips to rivers such as Shenandoah, Codorus Creek, and Monacacy. When not leading, I liked to run the Lower Yough, Nantahala Falls in North Carolina, and sea kayak in the Everglades. I also played on the JHU Club Baseball Team and acted as the social chair, organizing events such as social mixers and attending Orioles games.
+		Outside of Academics, I lead canoeing and whitewater kayaking trips with the Outdoor Pursuits Club. Every year, I led an overnight, week-long pre-orientation trip for incoming freshmen, as well as day trips to rivers such as Shenandoah, Codorus Creek, and Monacacy. When not leading, I liked to run the Lower Yough, Nantahala Falls in North Carolina, and sea kayak in the Everglades. I also played on the JHU Club Baseball Team and acted as the social chair, organizing events such as social mixers and attending Orioles games.
 	</p>
 	<p>
-		While at Hopkins, I also had my first foray in entrepreneurship. My freshman year, I founded <a href="https://bluejayboxes.johnshopkins.edu/">Blue Jay Boxes</a>, a student run care package company delivering custom care packages to students at Hopkins. I was originally motivated to start the company to reduce the delivery cost of sending care packages from homes, especially from international parents, but the company soon expanded to include delivering gift boxes for special occasions such as Valentine's Day. My senior year, I was an assistant producer at Ameluna, a Washington DC based startup aimed at promoting peace in the Middle East through various forms of media. During my stint with Ameluna, I networked with potential funders and collaborators, conducted research into the touchscreen and visual arts industries, and directed a video for the home page of the website.
+		While at Hopkins, I also had my first foray in entrepreneurship. My freshman year, I co-founded <a href="https://bluejayboxes.johnshopkins.edu/">Blue Jay Boxes</a>, a student run care package company delivering custom care packages to students at Hopkins. I was originally motivated to start the company to reduce the delivery cost of sending care packages from homes, especially from international parents, but the company soon expanded to include delivering gift boxes for special occasions such as Valentine's Day. My senior year, I was an assistant producer at Ameluna, a Washington DC based startup aimed at promoting peace in the Middle East through various forms of media. During my stint with Ameluna, I networked with potential funders and collaborators, conducted research into the touchscreen and visual arts industries, and directed a video for the home page of the website.
 	</p>
 	<p>
-		After four years at JHU, I graduated with a Master's degree in physics and a double major (Bachelor's Degree) in math and physics. My time at JHU directly led to my first job as a Senior Research Technician at the CLASS telescope in San Pedro de Atacama in Chile.
+		After four years at JHU, I graduated Phi Beta Kappa with a Master's degree in physics and a double major (Bachelor's Degree) in math and physics. My time at JHU directly led to my first job as a Senior Research Technician at the CLASS telescope in San Pedro de Atacama in Chile.
 	</p>
 </div>
 </div>
@@ -104,3 +104,14 @@
 </div>
 </div>
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99619476-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
