--- a/my_travels/my_travels.html
+++ b/my_travels/my_travels.html
@@ -33,5 +33,16 @@
 	</div>
 
 <p>
-	I'm currently working on an insider's guide to San Pedro de Atacama!
+	I'm currently working on an insider's guide to San Pedro de Atacama! In progress <a href="../SanPedro/index.html">here.</a>
 </p>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99619476-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
