--- a/my_work/my_work.html
+++ b/my_work/my_work.html
@@ -19,7 +19,7 @@
 			<a href="../index.html">Home</a>
 			<a href="../my_life/my_life.html">My Life</a>
 			<a href="my_work.html">My Work</a>
-			<a href="my_travels/my_travels.html">My Travels</a>
+			<a href="../my_travels/my_travels.html">My Travels</a>
 			<a href="#photography">Photography</a>
 		</div>
 	</div>
@@ -88,4 +88,21 @@
 	</p>
 </div>
 
+<div class="hor_line">
+	<hr>
+</div>
+
+
+
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99619476-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
