added Classics Landing page

--- a/my_life/my_life.html
+++ b/my_life/my_life.html
@@ -41,29 +41,33 @@
 	</div>
 
 <div id="my_story">
-	<div id="early_period_content">
-		<div class="periods" id="early_period">
-			<h3>
-				Early Life and Education
-			</h3>
-		</div>
 
-		<div id=early_period_para class="content">
-			<p>
-				I grew up in Ardsley, New York, a quiet suburban town in the county of Westchester. I have always loved sports and grew up playing Little League Baseball, basketball, and skiing in the Catskills at Windham mountain. In Middle School, I began my interscholastic athletic career, representing Ardsley in American Football (not soccer), basketball, and baseball. In 8th grade, arguably the height of my athletic career, I scored the winning touchdown that ended a two year Ardsley Football loosing streak and captained the baseball team to an almost undefeated season!
-			</p>
-			<p>
-				For high school, I attended Phillips Academy Andover, a boarding school in Massachusetts. Musically, I played percussion in the orchestra and snare drum for the Drumline. Athletically, I lettered in baseball and diving, and also captained the JV football team. Academically, I gained an interest in physics, taking a physics class for 3 out of the 4 years I attended Andover and learning advanced topics such as fluid mechanics and Lagrangian mechanics. In 2011, I graduated as my residential cluster president and received Cum Laude recognition.
-			</p>
-		</div>
-	</div>
+<div id="early_period_content">
+<div class="periods" id="early_period">
+	<h3>
+		Early Life and Education
+	</h3>
+</div>
 
-	<div id="university_content"><div class="periods" id="university">	
-		<h3>
-			University
-		</h3>
-	</div>
-	<div id="univestiy_para" class="content"><p>
+<div id=early_period_para class="content">
+	<p>
+		I grew up in Ardsley, New York, a quiet suburban town in the county of Westchester. I have always loved sports and grew up playing Little League Baseball, basketball, and skiing in the Catskills at Windham mountain. In Middle School, I began my interscholastic athletic career, representing Ardsley in American Football (not soccer), basketball, and baseball. In 8th grade, arguably the height of my athletic career, I scored the winning touchdown that ended a two year Ardsley Football loosing streak and captained the baseball team to an almost undefeated season!
+	</p>
+	<p>
+		For high school, I attended Phillips Academy Andover, a boarding school in Massachusetts. Musically, I played percussion in the orchestra and snare drum for the Drumline. Athletically, I lettered in baseball and diving, and also captained the JV football team. Academically, I gained an interest in physics, taking a physics class for 3 out of the 4 years I attended Andover and learning advanced topics such as fluid mechanics and Lagrangian mechanics. In 2011, I graduated as my residential cluster president and received Cum Laude recognition.
+	</p>
+</div>
+</div>
+
+<div id="university_content">
+<div class="periods" id="university">	
+	<h3>
+		University
+	</h3>
+</div>
+
+<div id="univestiy_para" class="content">
+	<p>
 		I attended Johns Hopkins University (JHU) for college, where I pursued my interest in physics. The summer after my freshman year, I began conducting research with the Cosmology Large Angular Scale Surveyor (CLASS) under Tobias Marriage. I continued to pursue research with this group throughout my time at JHU. My first summer I characterized the transmission properties of various lenses using a Fourier Transform Spectrometer. My second year, I characterized the thermal coupling constant between our transition edge sensor (TES) sensors and the thermal bath designed to cool the sensors from photon heating. My last two years at JHU were dedicated to preparing a cryostat for deployment in the field, culminating in my senior thesis. During my time in college, I also had an internship at the JHU Applied Physics Lab where I worked on characterizing sperm whale sonar interference, and I studied abroad in Geneva, Switzerland, where I worked at CERN on the KWISP project.
 	</p>
 	<p>
@@ -77,7 +81,9 @@
 	</p>
 </div>
 </div>
-<div id="spda_content"><div class="periods" id="spda">		
+
+<div id="spda_content">
+<div class="periods" id="spda">		
 	<h3>
 		San Pedro de Atacama
 	</h3>
@@ -91,7 +97,9 @@
 	</p>
 </div>
 </div>
-<div id="future_content"><div class="periods" id="future">		
+
+<div id="future_content">
+<div class="periods" id="future">		
 	<h3>
 		My Future
 	</h3>
@@ -102,6 +110,8 @@
 	</p>
 </div>
 </div>
+
+
 </div>
 </body>
 
