--- a/my_travels/my_travels.html
+++ b/my_travels/my_travels.html
@@ -33,7 +33,7 @@
 	</div>
 
 <p>
-	I'm currently working on an insider's guide to San Pedro de Atacama! In progress <a href="../SanPedro/index.html">here.</a>
+	I'm currently working on an insider's guide to San Pedro de Atacama! In progress <a href="../SanPedro/Pages/Home/En/index.html">here.</a>
 </p>
 
 <script>
