finished tatio page

--- a/SanPedro/Pages/Classics/En/index.html
+++ b/SanPedro/Pages/Classics/En/index.html
@@ -28,7 +28,7 @@
 
 	
 	<div class="item item_pic" id="tatio">
-	<a href="#tatio" title="Tatio">
+	<a href="tatio.html" title="Tatio">
 		<h2>North</h2>
 		<span>Tatio Geysers</span>
 	</a>
@@ -73,7 +73,7 @@
 
 <div id="content">
 	<p>
-		The locations above are the big attractions in the four cardinal directions around San Pedro de Atacama. In town, tours can be easily found for any of these attractions; however, if possible, we highly recommend renting your own vehicle to explore these places yourself. San Pedro is all about exploration and by having your own vehicle (4x4 recommended) you can check out places that are not frequented by the tour groups. Even the major tourist locations above have gorgeous landscapes and hidden secrets that tourist agencies will not normally drive to. By getting away from the other tour groups you can also fully enjoy the serenity and natural beauty of this place. 
+		The locations above are the big attractions in the four cardinal directions around San Pedro de Atacama. In town, tours can be easily found for any of these attractions; however, if possible, we highly recommend renting your own vehicle to explore these places yourself. San Pedro is all about exploration and by having your own vehicle (4x4 recommended) you can check out places that are not frequented by the tour groups. Even the major tourist locations above have gorgeous landscapes and hidden secrets that tourist agencies will not normally drive to. By getting away from the other tour groups you can also fully enjoy the serenity and natural beauty of this place. That being said, if you do take tours to these places, maybe you can convince your guide to visit one of the secret places listed on this website! 
 	</p>
 </div>
 
