--- a/SanPedro/Pages/Home/En/index.html
+++ b/SanPedro/Pages/Home/En/index.html
@@ -29,15 +29,15 @@
 
 <div id="intro">
 	<h3>
-		Who We Are
+		Who Am I?
 	</h3>
 	<div class="content" id="intro_content">
 	<p>
-		We are research technicians for the Cosmology Large Angular Scale Surveyor (CLASS) telescope living in San Pedro de Atacama. In our free time we like to explore this beautiful area in our 4x4 trucks. We have visited all the major tour destinations and many other places as well! The popularity of San Pedro de Atacama has grown greatly as a tourist destination in the past years. As we meet travelers who pass through San Pedro, we are often asked where to go and what to see. As two adventure loving travelers as well, we decided to put together this guide to offer a perspective to the area that you won't find in guide books!
+		I was a research technician for the Cosmology Large Angular Scale Surveyor (CLASS) telescope living in San Pedro de Atacama. In my free time I liked to explore this beautiful area in my 4x4 trucks. I have visited all the major tour destinations and many other places as well! The popularity of San Pedro de Atacama has grown greatly as a tourist destination in the past years. As I met travelers who pass through San Pedro, I am often asked where to go and what to see. As an adventure loving travelers as well, I decided to put together this guide to offer a perspective to the area that you won't find in guide books! While I lived in San Pedro, I explored with my coworker Deniz. Currently he is still in San Pedro with his wife and we are all working together to keep this guide up to date!
 	</p>
 	</div>
 	<h4>
-		-Manwei & Deniz
+		-Manwei
 	</h4>
 </div>
 
