Added masonry fix

--- a/Pages/photography/photography.html
+++ b/Pages/photography/photography.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
 	<script type="text/javascript" src="Js/script.js"></script>
 	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script>
-	<script type="text/javascript" src="imagesloaded.pkgd.min.js"></script>
+	<script type="text/javascript" src="Js/imagesloaded.pkgd.min.js"></script>
 </head>
 
 
@@ -45,3 +45,4 @@
 	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script>
 
 </body>
+
