--- a/Pages/photography/photography.html
+++ b/Pages/photography/photography.html
@@ -27,10 +27,10 @@
 		</div>
 	</div>
 
-<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
+<!-- <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
   <div class="grid-sizer"></div>
   <div class="grid-item"><img src="../../Images/photography/milky_kayak_web.jpg" alt=""></div>
-  <div class="grid-item grid-item--width2"><img src="../../Images/photography/maine_sunrise_web.jpg" alt=""></div>
+  <div class="grid-item grid-item-width2"><img src="../../Images/photography/maine_sunrise_web.jpg" alt=""></div>
   <div class="grid-item"><img src="../../Images/photography/maine_bee_web.jpg" alt=""></div>
   <div class="grid-item"><img src="../../Images/photography/luna_moon_web.jpg" alt=""></div>
   <div class="grid-item"><img src="../../Images/photography/ojos_trails_web.jpg" alt=""></div>
@@ -42,7 +42,22 @@
 
 
 </div>
-	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script>
-
+	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script> -->
+<div id="photo_container">
+	<div class="inner_cont"><div class="hor_photo3-2" id="milk_kayak"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="space72"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="maine_bee"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="luna_moon"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="ojos_trails"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-1" id="maine_rise"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="space_way"></div></div>
+	<div class="inner_cont"><div class="vert_container3-2">
+		<div class="vert_photo3-2" id="ojos_point"></div>
+		<div class="vert_photo3-2" id="space60"></div>
+	</div>
+	</div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="class_way"></div></div>
+	
+</div>
 </body>
 
