Made the home page picture a background image and centered the text.

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
 		</div>
 	</div>
 
-	<div class="parent"> 
-		<img src="Images/home/star_kayak_web.jpg" id="star_kayak" alt="">
+	<div id="parent">
+		<div class="welcome_text">
+			<h1>Welcome To My Universe</h1>
+		</div> 
+		<!-- <img src="Images/home/star_kayak_web.jpg" id="star_kayak" alt=""> -->
 	</div>	
 
-	<div class="welcome_text">
-		<h1>Welcome To My Universe</h1>
-	</div>
+
 
 
 <h2>
-	Star Gazer, Outdoor Enthusiast, and Future Astronaut
+	Star Gazer, Outdoor Enthusiast, and Aspiring Astronaut
 </h2>
 
 <div class="hor_line">
