Fixed aspect ratio on landing images.

--- a/Pages/photography/photography.html
+++ b/Pages/photography/photography.html
@@ -5,8 +5,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
 	<script type="text/javascript" src="Js/script.js"></script>
-	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script>
-	<script type="text/javascript" src="Js/imagesloaded.pkgd.min.js"></script>
+<!-- 	<script type="text/javascript" src="Js/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src="Js/imagesloaded.pkgd.min.js"></script> -->
 </head>
 
 
