--- a/Pages/my_life/my_life.html
+++ b/Pages/my_life/my_life.html
@@ -25,13 +25,14 @@
 		</div>
 	</div>
 
-	<div class="parent"> 
-		<img src="../../Images/my_life/life_pic_cropped_web.jpg" id="my_life" alt="">
-	</div>	
-
+	<div id="parent">
 	<div class="welcome_text">
 		<h1>My Life</h1>
-	</div>
+	</div> 
+		<!-- <img src="../../Images/my_life/life_pic_cropped_web.jpg" id="my_life" alt=""> -->
+	</div>	
+
+	
 
 
 	<h2>
@@ -117,7 +118,7 @@
 </div>
 </body>
 
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -126,4 +127,4 @@
   ga('create', 'UA-99619476-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
