added piece to my life about being at MIT. fixed aspect ratio to my travels. Attempted to fix mobile show on click for my travels pages.

--- a/Pages/my_life/my_life.html
+++ b/Pages/my_life/my_life.html
@@ -104,12 +104,12 @@
 <div id="future_content">
 <div class="periods" id="future">		
 	<h3>
-		My Future
+		Graduate School	
 	</h3>
 </div>
 <div id="future_para" class="content">			
 	<p>
-		In the Fall of 2017, I will be attending MIT to obtain a Master's degree in aeronautics and astronautics by working on cold atom sensing interferometry. Hopefully, this is the next step to becoming an astronaut!
+		I'm currently studying for a master's degree in aerospace engineering at MIT. I am working at Draper Labs on Darpa's <a href=https://www.darpa.mil/program/robotic-servicing-of-geosynchronous-satellites>Robotic Servicing of Geosynchronous Satellites (RSGS) project</a>.  Hopefully, this is the next step to becoming an astronaut!
 	</p>
 </div>
 </div>
