--- a/Pages/my_travels/my_travels.html
+++ b/Pages/my_travels/my_travels.html
@@ -25,14 +25,12 @@
 		</div>
 	</div>
 
-	<div class="parent"> 
-		<img src="../../Images/my_travels/travel_pic_web.jpeg" id="my_travels" alt="">
-	</div>	
-
+	<div id="parent"> 
 	<div class="welcome_text">
 		<h1>My Travels</h1>
 	</div>
-
+	</div>
+	
 	<h2>
 		Places I've Called Home
 	</h2>
