--- a/Pages/photography/photography.html
+++ b/Pages/photography/photography.html
@@ -29,9 +29,12 @@
 <div id="photo_container">
 	<div class="inner_cont"><div class="hor_photo3-2" id="milk_kayak"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="space72"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="bjorn"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="maine_bee"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="luna_moon"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="ojos_trails"></div></div>
+	<!-- <div class="inner_cont"><div class="hor_photo3-2" id="llama_colorado"></div></div> -->
+	<div class="inner_cont"><div class="hor_photo3-2" id="truck"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-1" id="maine_rise"></div></div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="space_way"></div></div>
 	<div class="inner_cont"><div class="vert_container3-2">
@@ -40,6 +43,7 @@
 	</div>
 	</div>
 	<div class="inner_cont"><div class="hor_photo3-2" id="class_way"></div></div>
+	<div class="inner_cont"><div class="hor_photo3-2" id="llama_face"></div></div>
 	
 </div>
 </body>
