--- a/Pages/home/index.html
+++ b/Pages/home/index.html
@@ -1,3 +1,7 @@
+<!-- ---
+redirect_from: "../../index.html"
+---
+ -->
 <!doctype html>
 <html>
 <head>
@@ -41,6 +45,8 @@
 	<hr>
 </div>
 
+<div id="nav-trigger"></div>
+
 <div id="links">
 	<div class="link_photos">
 		<a href="../my_life/my_life.html" class="nav-link">
@@ -69,8 +75,14 @@
 	<span class="stretch"></span>
 </div>
 
-</body>
-</html>
+<!-- Scripts  -->
+<script src="js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -82,5 +94,10 @@
   ga('send', 'pageview');
 
 </script>
+
+</body>
+</html>
+
+
 
 <!-- km,kf,av,rw,aa,jm,wp,CG,ss,CF,EM,VT,CJ -->
