--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="../home/index.html">MANWEI CHAN</a>
 		</div>
 		<div id="nav_bar">
-			<a href="Pages/home/index.html" class="icon_div">Home</a>
+			<a href="index.html" class="icon_div">Home</a>
 			<a href="Pages/my_life/my_life.html" class="icon_div">My Life</a>
 			<a href="Pages/my_work/my_work.html" class="icon_div">My Work</a>
 			<a href="Pages/my_travels/my_travels.html" class="icon_div">My Travels</a>
@@ -25,7 +25,7 @@
 	</div>
 
 	<div id="parent">
-		<div class="welcome_text">
+		<div class="welcome_text" id="growText">
 			<h1>Welcome To My Universe</h1>
 		</div> 
 		<!-- <img src="Images/home/star_kayak_web.jpg" id="star_kayak" alt=""> -->
@@ -33,45 +33,80 @@
 
 
 
-
-<h2>
-	Star Gazer, Outdoor Enthusiast, and Aspiring Astronaut
+<div id="triggerh2"></div>
+<h2 id = 'shortDescrip'>
+Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying for a Master's Degree in Aerospace Engineering at MIT. If you want to know more, feel free to explore the rest of my site.
 </h2>
 
 <div class="hor_line">
 	<hr>
 </div>
 
+<div id="trigger1"></div>
 <div id="links">
 	<div class="link_photos">
 		<a href="Pages/my_life/my_life.html" class="nav-link">
 		<figure id="pic_me">
-			<img src="Images/home/life_pic2_web.jpg" id="me_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Life</figcaption>
+			<img src="Images/home/life_pic2_web.jpg" id="me_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents">My Life</figcaption>
 		</figure>
 		</a>
 	</div>
 	<div class="link_photos">
 		<a href="Pages/my_work/my_work.html" class="nav-link">
 		<figure id="pic_CLASS">
-			<img src="Images/home/CLASS_pic5_web.jpg" id="CLASS_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Work</figcaption>
+			<img src="Images/home/CLASS_pic5_web.jpg" id="CLASS_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents"">My Work</figcaption>
 		</figure>
 		</a>
 	</div>
 	<div class="link_photos">
 		<a href="Pages/my_travels/my_travels.html" class="nav-link">
 		<figure id="pic_travel">
-			<img src="Images/home/travel_pic4_web.jpg" id="travel_pic" class="nav_photos" alt="">
-			<figcaption class="caption">My Travels</figcaption>
+			<img src="Images/home/travel_pic4_web.jpg" id="travel_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents">My Travels</figcaption>
 		</figure>
 		</a>
 	</div>
 	<span class="stretch"></span>
 </div>
 
-</body>
-</html>
+<div id="workIntro">
+	<h3>My Work</h3>
+	<p>A selection of projects I've worked on, beginning with the most recent. For more information, check out my <a href="Images/CV.pdf">CV</a></p>
+</div>
+
+
+<!-- Work Slides -->
+<div id="pinContainer">
+	<div id="slideContainer">
+		<section class="panel RSGS">
+			<h4>RSGS</h4>
+			<p id="RSGS_descrip">I work on the guidance, navigation, and control team for the Robotic Servicing of Geosynchronous Satellites (RSGS) at Draper Labs. My research is determining a guidance algorithm that will allow the servicing satellite to dock with an uncontrolled tumbling client satellite.</p>
+		</section>
+		<section class="panel CLASS">
+			<h4>CLASS</h4>
+			<p id="CLASS_descrip">I worked on the Cosmology Large Angular Scale Surveyor (CLASS), a telescope studying the origins of our universe. Specifically, CLASS is looking for details in the Cosmic Microwave Background for signs of inflation. With CLASS, a prepared the 90GHz cryostat for deployment in the field and was later the senior technician at the site in Chile.</p>
+		</section>
+		<section class="panel CERN"> 
+			<b>THREE</b>
+		</section>
+		<section class="panel APL">
+			<b>FOUR</b>
+		</section>
+	</div>
+</div>
+
+
+<!-- Scripts  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="Js/script.js"></script>
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -84,4 +119,18 @@
 
 </script>
 
-<!-- km,kf,av,rw,aa,jm,wp,CG,ss,CF,EM,VT,CJ -->
+</body>
+</html>
+
+<!-- <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99619476-1', 'auto');
+  ga('send', 'pageview');
+
+</script> -->
+
+<!-- km,kf,av,rw,aa,jm,wp,CG,ss,CF,EM,VT,CJ, NL -->
