--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheet2.css">
 	<link href="https://fonts.googleapis.com/css?family=Cuprum|Indie+Flower" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:500,600,700|IBM+Plex+Sans:300,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:300,500,600,700|IBM+Plex+Sans:300,500,700" rel="stylesheet">
 	<script type="text/javascript" src="Js/script.js"></script>
 	 <!-- <meta name="viewport" content="width=device-width"> -->
 <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -13,7 +13,7 @@
 
 <body>
 <div id="scrollContainer">
-	<header><title>Manwei Chan</title></header>
+	<!-- <header><title>Manwei Chan</title></header>
 	
 	<div class="topnav" id="myTopnav">
 		<div id="nav_name">
@@ -27,7 +27,8 @@
 			<a href="Pages/photography/photography.html" class="icon_div">Photography</a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
-	</div>
+	</div> -->
+
 
 	<div id="parent">
 		<div class="welcome_text" id="growText">
@@ -36,12 +37,22 @@
 		<!-- <img src="Images/home/star_kayak_web.jpg" id="star_kayak" alt=""> -->
 	</div>	
 
-
+<div id="spacer1"></div>
 
 <div id="triggerh2"></div>
+
+<div id="facePicContainer">
+	<div id="facePic">
+		<img src="Images/home/life_pic1_square_reducWeb.jpeg" id="face_pic_img" alt="">
+	</div>
+</div>
+
+<div id="introContainer">
+
 <h2 id = 'shortDescrip'>
-Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying for a Master's Degree in Aerospace Engineering at MIT. If you want to know more, feel free to explore the rest of my site.
+Hi! I love space research and outdoor adventures. I'm studying for a Master's Degree in Aerospace Engineering at MIT. If you want to know more, feel free to explore the rest of my site.
 </h2>
+</div>
 
 <div class="hor_line">
 	<hr>
@@ -49,27 +60,28 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 
 <div id="trigger1"></div>
 <div id="links">
-	<div class="link_photos">
-		<a href="Pages/my_life/my_life.html" class="nav-link">
-		<figure id="pic_me">
-			<img src="Images/home/life_pic2_web.jpg" id="me_pic" class="nav_photos siteContents" alt="">
-			<figcaption class="caption siteContents">My Life</figcaption>
-		</figure>
-		</a>
-	</div>
-	<div class="link_photos">
-		<a href="Pages/my_work/my_work.html" class="nav-link">
+	<div class="link_photos" id="workLink">
+		<!-- <a href="Pages/my_work/my_work.html" class="nav-link"> -->
+			<a href="#workIntro" class="nav-link">
 		<figure id="pic_CLASS">
-			<img src="Images/home/CLASS_pic5_web.jpg" id="CLASS_pic" class="nav_photos siteContents" alt="">
-			<figcaption class="caption siteContents"">My Work</figcaption>
+			<img src="Images/home/CLASS_pic4_reduc_web.jpeg" id="CLASS_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents"">MY WORK</figcaption>
 		</figure>
 		</a>
 	</div>
-	<div class="link_photos">
-		<a href="Pages/my_travels/my_travels.html" class="nav-link">
+	<div class="link_photos" id="travelLink">
+		<a href="#travelIntro" class="nav-link">
 		<figure id="pic_travel">
-			<img src="Images/home/travel_pic4_web.jpg" id="travel_pic" class="nav_photos siteContents" alt="">
-			<figcaption class="caption siteContents">My Travels</figcaption>
+			<img src="Images/home/travel_pic_reduc_web.jpeg" id="travel_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents">MY TRAVELS</figcaption>
+		</figure>
+		</a>
+	</div>
+	<div class="link_photos" id="photographyLink">
+		<a href="Pages/photography/photographySlides.html" class="nav-link">
+		<figure id="pic_photo">
+			<img src="Images/photography/llama_face_web.jpg" id="travel_pic" class="nav_photos siteContents" alt="">
+			<figcaption class="caption siteContents">MY PHOTOGRAPHY</figcaption>
 		</figure>
 		</a>
 	</div>
@@ -91,7 +103,7 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		<section class="panel RSGS">
 			<div id="RSGS_text" class="workText">
 			<h4>RSGS</h4>
-			<p id="RSGS_descrip">Currently, I work on the guidance, navigation, and control team for the Robotic Servicing of Geosynchronous Satellites (RSGS) at Draper Labs. I am developing a guidance algorithm that will allow the servicing satellite to dock with an uncontrolled tumbling client satellite.</p>
+			<p id="RSGS_descrip">Currently, I work with the guidance, navigation, and control team for the Robotic Servicing of Geosynchronous Satellites (RSGS) at Draper Labs. I am developing a guidance algorithm that will allow the servicing satellite to dock with an uncontrolled tumbling client satellite.</p>
 			</div>
 
 			<div class="scrollArrowContainer">
@@ -109,7 +121,7 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 				COSMOLOGY LARGE ANGULAR SCALE SURVEYOR (CLASS)
 				CLASS is searching for signs of inflation which occurred moments after the Big Bang.  As a research assistant I prepared the 90GHz cryotstat.  When CLASS was deployed in Chile, I was a senior site technician. -->
 			<!-- </p> -->
-			<h4>CLASS Telescope (2013-2017)</h4>
+			<h4>CLASS Telescope <span class="lighth4>">(2013-2017)</span></h4>
 			<p id="CLASS_descrip">The Cosmology Large Angular Scale Surveyor (CLASS) is searching for signs of inflation which occurred moments after the Big Bang.  As a research assistant I prepared the 90GHz cryotstat.  When CLASS was deployed in Chile, I was a senior site technician.</p>
 			</div>
 
@@ -121,8 +133,8 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panel CERN"> 
 			<div id="CERN_text" class="workText">
-			<h4>CERN (2015)</h4>
-			<p id="KWISP_descrip">I worked with Professor Giovanni Cantatore at The European Organization for Nuclear Research or CERN (Conseil Européen pour la Recherche Nucléaire) in 2015. On the KWISP (Kinetic WISP Detection) project, I worked with the optical set up to prepare a detector looking for the hypothesized Chameleon particle.</p>
+			<h4>CERN <span class="lighth4>">(2015)</span></h4>
+			<p id="KWISP_descrip">I worked with Professor Giovanni Cantatore at The European Organization for Nuclear Research or CERN (Conseil Européen pour la Recherche Nucléaire). On the KWISP (Kinetic WISP Detection) project, I prepared the optical set-up searching for the hypothesized Chameleon particle.</p>
 			</div>
 
 			<div class="scrollArrowContainer">
@@ -133,8 +145,8 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panel APL">
 			<div id="APL_text" class="workText">
-			<h4>APL (2014)</h4>
-			<p id="APL_descrip">At the Johns Hopkins Applied Physics Lab, I determined the amount of interference an underwater sound sensor may hear from sperm whale vocalizations (sonar).</p>
+			<h4>APL <span class="lighth4>">(2014)</span></h4>
+			<p id="APL_descrip">At the Johns Hopkins Applied Physics Lab, I determined the amount of interference from sperm whale vocalizations (sonar) that affect underwater sound sensors.</p>
 			</div>
 
 			<div class="scrollArrowContainer">
@@ -161,7 +173,7 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 	<!-- <div id="slideContainer"> -->
 		<section class="panelTravel SPDA" id="SPDAWorkPic">
 			<div id="SPDA_text" class="travelText">
-			<h4>San Pedro de Atacama (2016-2017)</h4>
+			<h4>San Pedro de Atacama <span class="lighth4>">(2016-2017)</span></h4>
 			<p id="SPDA_descrip">I lived in the desert town of San Pedro de Atacama for a year while working on the CLASS telescope. In my spare time, I enjoyed exploring high altitude lakes, flamingoes, and geysers. I also had the opportunity to visit the Uyuni salt flat in Bolivia and Patagonia in Argentina.
 			</p>
 			</div>
@@ -174,7 +186,7 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panelTravel Geneva"> 
 			<div id="Geneva_text" class="travelText">
-			<h4>Geneva (2015)</h4>
+			<h4>Geneva <span class="lighth4>">(2015)</span></h4>
 			<p id="KWISP_descrip">I spent half a year in Geneva while working at CERN. The beauty of lakes, mountains combined with Switzerland's central location in Europe made it a great homebase for exploration.</p>
 			</div>
 
@@ -186,8 +198,8 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panelTravel Beijing">
 			<div id="Beijing_text" class="travelText">
-			<h4>Beijing (2012)</h4>
-			<p id="Beijing_descrip">This was the first time I visited Asia, and I will never forget the historical sites, friends, and food I encountered during my time. Highlights of my stay in Asia includ visiting Hong Kong, Thailand, and Cambodia.</p>
+			<h4>Beijing <span class="lighth4>">(2012)</span></h4>
+			<p id="Beijing_descrip">This was the first time I visited Asia, and I will never forget the historical sites, friends, and food I encountered. Highlights of my stay in Asia include visiting Hong Kong, Thailand, and Cambodia.</p>
 			</div>
 
 			<div class="scrollArrowContainer">
@@ -198,7 +210,7 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panelTravel Annecy">
 			<div id="Annecy_text" class="travelText">
-			<h4>Annecy (2012)</h4>
+			<h4>Annecy <span class="lighth4>">(2012)</span></h4>
 			<p id="Annecy_descrip">Through a language exchange program, I lived in a homestay in the quaint town of Annecy. Its proximity to the Alps offered plenty of skiing opportunities.</p>
 			</div>
 
@@ -210,15 +222,15 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 		</section>
 		<section class="panelTravel Nepal">
 			<div id="Nepal_text" class="travelText">
-			<h4>Nepal</h4>
+			<h4>Nepal <span class="lighth4>">(2011)</span></h4>
 			<p id="Nepal_descrip">I volunteered to teach English at a Buddhist monastery with the hopes that I could gain some of their wisdom on the path to enlightenment.</p>
 			</div>
 
-			<div class="scrollArrowContainer">
+<!-- 			<div class="scrollArrowContainer">
 			<div class="scrollArrow">
 			<i class="fa fa-chevron-down"></i>
 			</div>
-			</div>
+			</div> -->
 		</section>
 	<!-- </div> -->
 					
@@ -233,6 +245,9 @@ Hi! I'm a space researcher who loves outdoor adventures. Currently, I'm studying
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>  -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-localScroll/1.3.5/jquery.localScroll.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script> -->
 <script src="Js/script.js"></script>
 
 
